# AE2VID

./: .gitignore  README.md  predict.py  pyproject.toml  train.py  train_adapter.py  train_ae2vid.py
configs/: paths.example.yaml  train_adapter_v2v.yaml  train_ae2vid_v2v.yaml
dataset/: dataset.py
degradation/: degradation.py
model/: BiApEVID.py  hsg.py  loss.py  mixer.py
model/rife_model/: IFNet.py  IFNet_2R.py  IFNet_m.py  RIFE.py  refine.py  refine_2R.py
model/rife_model/oldmodel/: IFNet_HD.py  IFNet_HDv2.py  RIFE_HD.py  RIFE_HDv2.py
pretrained/: README.md
scripts/: predict_evaid.sh  predict_hqf.sh  predict_real.sh  train_ae2vid.sh
utils/: aperture_utils.py  interpolate_util.py  loss_utils.py  test_flow.py
