[project]
name = "ae2vid"
version = "0.1.0"
description = "Official code for AE2VID: Event-based Video Reconstruction via Aperture Modulation"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "h5py>=3.10",
  "lpips>=0.1.4",
  "numpy>=1.24,<2",
  "opencv-python-headless>=4.8",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "scipy>=1.10",
  "tensorboard>=2.14",
  "timm>=0.9",
  "torch>=2.1",
  "torchvision>=0.16",
  "tqdm>=4.66",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
